[MODORDERS-1098] Converted toList